Fixed user dropdown from getting cut off

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -103,19 +103,16 @@ body {
 
 .nav-item.dropdown {
     position: relative;
+    overflow: visible;
 }
 
 .dropdown-menu {
-    display: none;
-    position: absolute;
-    top: 100%;
-    left: 0%;
     background-color: white;
     border-radius: 5px;
     padding: 0%;
     list-style: none;
     min-width: 160px;
-    z-index: 1;
+    z-index: 1050;
 }
 
 .dropdown-menu .dropdown-item {
